Change events to activities
