# src/server.js
@@ -1,12 +1,13 @@
 import express from 'express';
 import swaggerUi from 'swagger-ui-express';
 import fs from 'fs';
+import { ValidationError } from "express-json-validator-middleware";
 
 import { log } from './utility/logger.js';
 import { initDbConnection } from './database/db-helper.js';
 import { router as healthRoutes } from "./health/health-routes.js"
 import { router as goalRoutes } from "./goal/goal-routes.js"
-import { router as eventRoutes } from "./event/event-routes.js"
+import { router as activityRoutes } from "./activity/activity-route.js"
 import { router as entityRoutes } from "./entity/entity-routes.js"
 
 async function startServer(appServerPort, neo4jBoltUri, neo4jUser, neo4jPassword) {
@@ -16,8 +17,8 @@ async function startServer(appServerPort, neo4jBoltUri, neo4jUser, neo4jPassword
     const app = express();
 
     app.use('/schemas', express.static('src/schemas'))
-    
-    var swaggerDocument = JSON.parse(fs.readFileSync(`./src/swagger.json`, `utf8`));    
+
+    var swaggerDocument = JSON.parse(fs.readFileSync(`./src/swagger.json`, `utf8`));
     app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
     app.use((req, res, next) => {
@@ -29,8 +30,18 @@ async function startServer(appServerPort, neo4jBoltUri, neo4jUser, neo4jPassword
 
     app.use("/health", healthRoutes);
     app.use("/goals", goalRoutes);
-    app.use("/events", eventRoutes);
+    app.use("/activities", activityRoutes);
     app.use("/entities", entityRoutes);
+
+    // handle schema validation errors
+    app.use((error, request, response, next) => {
+        if (error instanceof ValidationError) {
+            response.status(400).send(error.validationErrors);
+            next();
+        } else {
+            next(error);
+        }
+    });
 
     appServerPort = appServerPort || 3000;
 
